Add new endpoint for frontend redesign
